finished admin dashboard

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,7 @@ body {
   /* background-color: rgb(143, 143, 143);
   border-radius: 50px; */
 }
+
+#allTask::-webkit-scrollbar{
+  background-color: transparent;
+}
